--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,20 @@
-body {
+#everything {
   background-color: #f6f6ef;
+  width: 85%;
+  margin: 0px auto;
+  min-height: 700px;
+}
+
+#loading {
+  background-color: #f6f6ef;
+  width: 85%;
+  margin: 0px auto;
+  min-height: 800px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 #spinner {
   margin-top: 50px;
-}
+ }
