--- a/src/App.css
+++ b/src/App.css
@@ -18,3 +18,14 @@
 #spinner {
   margin-top: 50px;
  }
+
+ @media screen and (max-width: 900px) {
+  #everything {
+    width: 100%;
+  }
+  #loading {
+
+    width: 100%;
+
+  }
+ }
